<resources>
    <string name="app_name">New</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello User!</string>
    <string name="nav_header_subtitle">email.id@domain.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">News</string>
    <string name="menu_gallery">Saved News</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="api">https://newsapi.org/v2/</string>
    <string name="api_key">ab5c10fe89da4cb799e0647ab64ac1f4</string>

    <string name="transition_simple_avatar">simple avatar</string>
    <string name="transition_simple_name">simple name</string>
    <string name="transition_simple_description">simple description</string>

</resources>
